--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-intersection-observer": "^9.4.4",
     "tailwindcss-animation-delay": "^1.0.7"
   },
   "devDependencies": {
